[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"
rustflags = ["--cfg", "web_sys_unstable_apis"] # needed to make webgpu (still experimental) compile with wasm-pack/wasm-bindgen

[lib]
crate-type = ["cdylib", "rlib"] # both needed to compile to wasm with wasm-pack

[dependencies]
bytemuck = { version = "1.13", features = ["derive"]}
winit = { version = "0.28", default-features = false }
wgpu = { version = "0.17" }
png = { version = "0.17.10", default-features = false }
glam = { version = "0.24" }

js-sys = "0.3.67"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Response",
]}

[build-dependencies] # no impact on binary size
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.release]
panic = "abort"     # abort immediately rather than unwind, removes need for extra unwinding code; smaller binary
strip = "symbols"   # remove symbols from binary; smaller binary
opt-level = 'z'     # z is for smallest possible binary including no loop vectorization, 3 is most speed, 0 for faster compilation
codegen-units = 1   # Reduce Parallel Code Generation Units to Increase Optimization
lto = true          # longer compile time, more optimization
incremental = false # recompile fully to ensure optimizations

# Compile build-dependencies in release mode with more optimized than default
[profile.release.build-override]
opt-level = 'z'
codegen-units = 1

[profile.dev]       # faster compile time for dev builds
panic = "unwind"
strip = "none"
opt-level = 0
codegen-units = 256
lto = false
incremental = true
